@startuml
'https://plantuml.com/class-diagram

class javafx.App {
    start()
    main()
}

class Item {
    String name
    String serialNumber
    BigDecimal price

    get()
    set()
    toString()
}

class FileUtil {
    File file
    ObservableList list

    readFromTXT()
    readFromHTML()
    readFromJSON()
    readToTxt()
    readToHTML()
    readToJSON()
}

class FileLoader {

    readFromTXT()
    readFromHTML()
    readFromJSON()

}

class FileSaver {

    readToTxt()
    readToHTML()
    readToJSON()

}

class InventoryController {
    ObservableList inventoryList
}

javafx.App*--InventoryController
InventoryController--FileUtil
InventoryController--Item
FileUtil<|--FileSaver
FileUtil<|--FileLoader

@enduml